# haru-simplelogger

./: .gitignore  CMakeLists.txt  README.md
include/simplelogger/: simple_logger.hpp  simplelogger.hpp
src/: simple_logger.cpp  simplelogger.cpp
